test/spec_vectors/type-subtyping/fail/module_56.wat
(module (type $t (struct)) (type $s (sub $t (struct))))